# pyalanysis

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: coverage.yml  poetry_test.yml
alan/: README.md  pyproject.toml
alan/tests/: test_alan.py
docs/: conf.py
examples/: ALAN evolution for one year in South Holland.ipynb  README.md  Show ALAN in the Netherlands.ipynb  environment.yml
pyalanysis/: LICENSE  pyproject.toml
pyalanysis/tests/: test_pyalanysis.py
src/pyalanysis/: __init__.py  utils.py
src/pyalanysis/data/: __init__.py  viirsdnb.py
tests/: test_pyalanysis.py  test_utils.py  test_viirsdnb.py  viirsdnb_utils.py
tests/test_viirs_monthly_vcmslcfg_load/: SVDNB_npp_19001001-19001031_00N060E_vcmslcfg_v10_c190010112300.tgz
