[tool.poetry]
name = "pyalanysis"
version = "0.1.0"
description = ""
authors = ["Anton Bossenbroek <anton.bossenbroek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
MechanicalSoup = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.940"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["pyanalysis", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyanalysis"]

[tool.coverage.report]
show_missing = true
fail_under = 70
