[tool.poetry]
name = "pyalanysis"
version = "0.1.0"
description = "A package to analyse and visualize artificial light at night (ALAN)"
authors = ["Anton Bossenbroek <anton.bossenbroek@gmail.com>"]
license = "BSD-3"
readme = "README.md"
homepage = "https://github.com/pyalanysis/pyalanysis"
repository = "https://github.com/pyalanysis/pyalanysis"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
poetry2setup = "^1.0.0"
mypy = "^0.940"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyanalysis"]

[tool.coverage.report]
show_missing = true

[tool.coverage.report]
fail_under = 100
